# sphinx-ts

./: .gitignore  .pre-commit-config.yaml  ENUM_IMPROVEMENT_DEMO.md  FORMATTING_ALIGNMENT.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: Makefile  __init__.py  conf.py  examples.rst  index.rst  usage.rst
examples/: calculator.ts  enums.ts
src/sphinx_ts/: __init__.py  directives.py  domain.py  parser.py
src/sphinx_ts/directives/: __init__.py  base.py  class_directive.py  common.py  data_directive.py  enum_directive.py  interface_directive.py
src/sphinx_ts/parser/: __init__.py  ast_nodes.py  doc_comment.py  mixins.py  ts_parser.py  value_parser.py
src/ts_sphinx/: directives.py  domain.py  parser.py
tests/: __init__.py  test_directives.py  test_domain.py  test_extension.py  test_parser.py
