[project]
name = "sphinx-ts"
version = "0.1.0"
description = "Sphinx extension for TypeScript documentation using Tree-sitter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=5.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "docutils>=0.17",
    "pytest-cov>=6.2.1",
    "sphinx-rtd-theme>=3.0.2",
    "furo>=2025.7.19",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.entry-points."sphinx.html_themes"]
sphinx_ts = "sphinx_ts"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "tree-sitter>=0.23.2",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D213", "D211", "D203", "S101", "FBT001", "ARG002"]

[tool.ruff.lint.per-file-ignores]
# Ignore doc lint rules in tests.
"tests/**" = ["D"]

[tool.pyright]
exclude = [".venv"]
