[project]
name = "sphinx-ts"
version = "0.0.0"
description = "Sphinx extension for TypeScript documentation using Tree-sitter"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Thomas Carroll" }]
maintainers = [{ name = "Thomas Carroll" }]
keywords = [
    "sphinx",
    "typescript",
    "documentation",
    "autodoc",
    "tree-sitter",
    "jsdoc",
    "api-documentation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
]
requires-python = ">=3.12"
dependencies = [
    "sphinx>=5.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "docutils>=0.17",
    "sphinx-rtd-theme>=3.0.2",
    "furo>=2025.7.19",
]

[project.urls]
Homepage = "https://github.com/snus-kin/sphinx-ts"
Repository = "https://github.com/snus-kin/sphinx-ts"
Documentation = "https://sphinx-ts.readthedocs.io"
"Bug Reports" = "https://github.com/snus-kin/sphinx-ts/issues"
Changelog = "https://github.com/snus-kin/sphinx-ts/releases"

[build-system]
requires = ["uv_build>=0.8.14,<0.10.0"]
build-backend = "uv_build"

[project.entry-points."sphinx.html_themes"]
sphinx_ts = "sphinx_ts"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "tree-sitter>=0.23.2",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
    "basedpyright>=1.31.4",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D213",
    "D211",
    "D203",
    "S101",
    "FBT001",
    "ARG002",
    "RUF012",
    "PERF203",
    "PERF401",
    "C901",
    "PLR0912",
    "PLR0915",
    "PLR0913",
    "PLR0911",
    "BLE001",
]

[tool.ruff.lint.per-file-ignores]
# Ignore doc lint rules in tests.
"tests/**" = ["D", "SLF001", "RUF100", "PGH003"]
# Allow Any types in directive base class for Sphinx compatibility
"src/sphinx_ts/directives/base.py" = ["ANN401"]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
